# gentext_studio

./: .gitignore  CONTRIBUTING.md  README  README.md  ROADMAP.md  dependencies.py  dev.ps1  dev.sh  goles_db.demo  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.ps1  run.sh
courses/: LICENSE
courses/statistics/: description.md
courses/statistics/activities/: alternate_explanations_description.md  alternate_explanations_prompt.md  flashcards_description.md  flashcards_prompt.md  practice_quiz_conversation_description.md  practice_quiz_conversation_prompt.md  reciprocal_teaching_description.md  reciprocal_teaching_prompt.md  retrieval_practice_description.md  retrieval_practice_prompt.md
courses/statistics/topics/: 1._thinking_statistically_and_collecting_data_context.md  2._statistical_studies_context.md  2._statistical_studies_objectives.md  3._describing_data_graphically_context.md  3._describing_data_graphically_objectives.md  4._describing_data_numerically_context.md  4._describing_data_numerically_objectives.md  5._probability_objectives.md  LICENSE
docs/: Contributing.md  Development_Installation.md  Roadmap.md
models/: __init__.py  template_system.py
routers/: activity_selection.py  chat.py  explore.py
src/treebeard/: __init__.py  dependencies.py  groq_utils.py  middleware.py  settings.py  utils.py
src/treebeard/database/: __init__.py  chat.py  joins.py  queries.py  user.py
src/treebeard/models/: request_session.py
src/treebeard/routers/: auth.py  chat.py  dev.py  (+3 more)
static/css/: styles.css
templates/: base.html  chat.html  courses.yaml  select.html  select_activity.html  select_course.html  select_topic.html
(+61 files in other folders)
